--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h3>my first h3 element</h3>
+  </body>
 </html>
